# Fake-Speech-Detection-from-Raw-Waveforms-with-RawNet2

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  pyproject.toml
papers/arXiv-2011.01108v3/: Template.bbl  Template.tex  cut.tex  introNew.tex  oldIntro.tex  refs.bib  strings.bib
scripts/: download_dataset.py
src/rawnet2/: dataset.py  evaluate.py  model.py  train.py  utils.py
tests/: test_dataset.py  test_integration.py  test_model.py  test_utils.py  test_wandb.py
