[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rawnet2"
version = "0.1.0"
description = "RawNet2-based fake speech detection from raw waveforms (ASVspoof 2019 LA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub",
    "numpy",
    "pyyaml",
    "scikit-learn",
    "soundfile",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
cpu = ["torch", "torchaudio"]
gpu = ["torch", "torchaudio"]

[tool.hatch.build.targets.wheel]
packages = ["src/rawnet2"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-gpu", extra = "gpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-gpu", extra = "gpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["N812"]

[tool.ruff.format]
quote-style = "double"
